--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "1-pre-entrega",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -15,5 +14,7 @@
     "express-handlebars": "^7.1.2",
     "nodemon": "^3.0.3",
     "socket.io": "^4.7.4"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
